--- a/cach-chia-bai-ba-cay-diem-cao.html
+++ b/cach-chia-bai-ba-cay-diem-cao.html
@@ -13,6 +13,7 @@
     ></script>
     <link rel="stylesheet" href="style.css" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="icon" href="./Images/logotitle.png" />
     <title>Thủ Thuật Cá Cược - VN365s XYZ</title>
   </head>
   <body class="bg-[#EFEFEF]">
