--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     ></script>
     <link rel="stylesheet" href="style.css" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="icon" href="./Images/logotitle.png" />
     <title>VN365s XYZ - Link Vào Nhà Cái VN365s Mới Nhất 2022</title>
   </head>
   <body class="bg-[#EFEFEF]">
