--- a/khuyen-mai.html
+++ b/khuyen-mai.html
@@ -13,6 +13,7 @@
     ></script>
     <link rel="stylesheet" href="style.css" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="icon" href="./Images/logotitle.png" />
     <title>Khuyến mãi VN365s hấp dẫn và giá trị mà người chơi không thể bỏ qua</title>
   </head>
   <body class="bg-[#EFEFEF]">
