--- a/nap-tien.html
+++ b/nap-tien.html
@@ -13,6 +13,7 @@
     ></script>
     <link rel="stylesheet" href="style.css" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="icon" href="./Images/logotitle.png" />
     <title>6 cách nạp tiền VN365s cực kỳ chi tiết cho người chơi mới</title>
   </head>
   <body class="bg-[#EFEFEF]">
