--- a/rut-tien.html
+++ b/rut-tien.html
@@ -13,6 +13,7 @@
     ></script>
     <link rel="stylesheet" href="style.css" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="icon" href="./Images/logotitle.png" />
     <title>Hướng dẫn rút tiền VN365s và đánh giá tổng quan về VN365s</title>
   </head>
   <body class="bg-[#EFEFEF]">
