--- a/dang-ky.html
+++ b/dang-ky.html
@@ -13,6 +13,7 @@
     ></script>
     <link rel="stylesheet" href="style.css" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="icon" href="./Images/logotitle.png" />
     <title>Hướng dẫn đăng ký VN365s với các bước cực kỳ đơn giản</title>
   </head>
   <body class="bg-[#EFEFEF]">
