--- a/nhung-luu-y-khi-choi-bai-mau-binh-can-ghi-nho.html
+++ b/nhung-luu-y-khi-choi-bai-mau-binh-can-ghi-nho.html
@@ -560,7 +560,7 @@
                 <h1
                   class="text-sm md:text-base lg:text-sm xl:text-base font-bold"
                 >
-                  Cách bắt kèo trong bóng đá tại nhà cái uy tín D9Bet
+                  Cách bắt kèo trong bóng đá tại nhà cái uy tín VN365s
                 </h1>
                 <div class="text-xs md:text-sm lg:text-xs xl:text-sm">
                   <span> <ion-icon name="time-outline"></ion-icon> </span>
@@ -678,7 +678,6 @@
           <p class="lg:text-base text-sm">
             32t8 Âu Dương Lân, Phường 3, Quận 8, Thành phố Hồ Chí Minh
           </p>
-          <p class="lg:text-base text-sm">0969581241</p>
 
           <p>https://vn365s.xyz/</p>
         </div>
