--- a/cach-bat-keo-trong-bong-da.html
+++ b/cach-bat-keo-trong-bong-da.html
@@ -27,7 +27,7 @@
             <ion-icon onclick="hideSideNav()" name="close-outline"></ion-icon>
           </div>
           <div class="px-3 pt-8">
-            <img class="w-40" src="./Images/logo-d9bet-biz.png" alt="" />
+            <img class="w-28 md:w-32" src="./Images/logo-d9bet-biz.png" alt="" />
           </div>
           <div
             class="w-full h-full flex flex-col space-y-4 *:pb-2 *:border-b *:border-gray-400 *:pl-3 text-sm px-px *:hover:border-[#FF5200]"
@@ -103,8 +103,10 @@
 
         <!-- sm header -->
         <div class="w-full bg-[#161616] lg:hidden block">
-          <div class="flex justify-center items-center py-4">
-            <img src="./Images/logo-d9bet-biz.png" alt="" />
+          <div class=" flex justify-center items-center py-4">
+            <div class="w-36 md:w-48">
+              <img src="./Images/logo-d9bet-biz.png" alt="" />
+            </div>
           </div>
           <div class="py-4 border-t border-[#FF5200]">
             <div class="justify-between flex items-center px-2 md:px-5">
@@ -642,56 +644,7 @@
               </div>
             </a>
           </div>
-
-          <!-- <div class="flex space-x-3 pr-1">
-            <div>
-              <img
-                class="w-[130px] md:w-[70px] lg:w-52 xl:w-32"
-                src="./Images/iconCards/iconcard5.jpg"
-                alt=""
-              />
-            </div>
-            <div class="space-y-1">
-              <h1
-                class="text-sm md:text-base lg:text-sm xl:text-base font-bold"
-              >
-                Bật mí các cách chia bài ba cây điểm cao dành cho người chơi mới
-              </h1>
-              <div class="text-xs md:text-sm lg:text-xs xl:text-sm">
-                <span> <ion-icon name="time-outline"></ion-icon> </span>
-                <span> 10:14:SÁNG </span>
-                <span>
-                  <ion-icon name="calendar-outline"></ion-icon>
-                </span>
-                <span> 17 THÁNG SÁU 2022 </span>
-              </div>
-            </div>
-          </div> -->
-
-          <!-- <div class="flex space-x-3 pr-1">
-            <div>
-              <img
-                class="w-[130px] md:w-[70px] lg:w-52 xl:w-32"
-                src="./Images/iconCards/iconcard6.jpg"
-                alt=""
-              />
-            </div>
-            <div class="space-y-1">
-              <h1
-                class="text-sm md:text-base lg:text-sm xl:text-base font-bold"
-              >
-                Bật mí các cách chia bài ba cây điểm cao dành cho người chơi mới
-              </h1>
-              <div class="text-xs md:text-sm lg:text-xs xl:text-sm">
-                <span> <ion-icon name="time-outline"></ion-icon> </span>
-                <span> 10:14:SÁNG </span>
-                <span>
-                  <ion-icon name="calendar-outline"></ion-icon>
-                </span>
-                <span> 17 THÁNG SÁU 2022 </span>
-              </div>
-            </div>
-          </div> -->
+    
         </div>
       </div>
 
