--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <ion-icon onclick="hideSideNav()" name="close-outline"></ion-icon>
           </div>
           <div class="px-3 pt-8">
-            <img class="w-40" src="./Images/logo-d9bet-biz.png" alt="" />
+            <img class="w-28 md:w-32" src="./Images/logo-d9bet-biz.png" alt="" />
           </div>
           <div
             class="w-full h-full flex flex-col space-y-4 *:pb-2 *:border-b *:border-gray-400 *:pl-3 text-sm px-px *:hover:border-[#FF5200]"
@@ -99,8 +99,10 @@
 
       <!-- sm header -->
       <div class="w-full bg-[#161616] lg:hidden block">
-        <div class="flex justify-center items-center py-4">
-          <img src="./Images/logo-d9bet-biz.png" alt="" />
+        <div class=" flex justify-center items-center py-4">
+          <div class="w-36 md:w-48">
+            <img src="./Images/logo-d9bet-biz.png" alt="" />
+          </div>
         </div>
         <div class="py-4 border-t border-[#FF5200]">
           <div class="justify-between flex items-center px-2 md:px-5">
