--- a/nap-tien.html
+++ b/nap-tien.html
@@ -100,8 +100,10 @@
 
         <!-- sm header -->
         <div class="w-full bg-[#161616] lg:hidden block">
-          <div class="flex justify-center items-center py-4">
-            <img src="./Images/logo-d9bet-biz.png" alt="" />
+          <div class=" flex justify-center items-center py-4">
+            <div class="px-3 pt-8">
+              <img class="w-28 md:w-32" src="./Images/logo-d9bet-biz.png" alt="" />
+            </div>
           </div>
           <div class="py-4 border-t border-[#FF5200]">
             <div class="justify-between flex items-center px-2 md:px-5">
