--- a/cach-danh-dau-duoi-mien-bac.html
+++ b/cach-danh-dau-duoi-mien-bac.html
@@ -23,11 +23,13 @@
         class="hideandshow h-screen w-[65%] md:w-[40%] lg:hidden fixed top-0 bg-gray-200 bg-opacity-95 z-20"
       >
         <div class="w-full h-full space-y-6">
-          <div class="absolute top-4 right-3 text-2xl text-gray-600">
-            <ion-icon onclick="hideSideNav()" name="close-outline"></ion-icon>
+          <div class=" flex justify-center items-center py-4">
+            <div class="w-36 md:w-48">
+              <img src="./Images/logo-d9bet-biz.png" alt="" />
+            </div>
           </div>
           <div class="px-3 pt-8">
-            <img class="w-40" src="./Images/logo-d9bet-biz.png" alt="" />
+            <img class="w-28 md:w-32" src="./Images/logo-d9bet-biz.png" alt="" />
           </div>
           <div
             class="w-full h-full flex flex-col space-y-4 *:pb-2 *:border-b *:border-gray-400 *:pl-3 text-sm px-px *:hover:border-[#FF5200]"
