--- a/dang-ky.html
+++ b/dang-ky.html
@@ -18,29 +18,29 @@
   </head>
   <body class="bg-[#EFEFEF]">
     <div class="bg-[#FFFFFF] mx-auto max-w-[1465px] border px-[18px]">
-
-       <!-- side nav -->
-       <div class="hideandshow h-screen w-[65%] md:w-[40%] lg:hidden fixed  top-0 bg-gray-200 bg-opacity-95 z-20 ">
-
-        <div class="w-full h-full space-y-6">
-         <div class=" absolute top-4 right-3 text-2xl text-gray-600">
-           <ion-icon onclick="hideSideNav()" name="close-outline"></ion-icon>
-         </div>
-         <div class="px-3 pt-8">
-          <img class="w-28 md:w-32" src="./Images/logo-d9bet-biz.png" alt="" />
-        </div>
-         <div
-         class="w-full h-full flex flex-col space-y-4 *:pb-2 *:border-b *:border-gray-400 *:pl-3 text-sm px-px *:hover:border-[#FF5200]"
-       >
-         <a href="./index.html"> TRANG CHỦ </a>
-         <a href="./dang-ky.html"> ĐĂNG KÝ </a>
-         <a href="./nap-tien.html"> NẠP TIỀN </a>
-         <a href="./rut-tien.html"> RÚT TIỀN </a>
-         <a href="./khuyen-mai.html"> KHUYẾN MÃI </a>
-         <a href="./thu-thuat-ca-cuoc.html"> THỦ THUẬT CÁ CƯỢC </a>
-       </div>
-        </div>
-       </div>
+  <!-- side nav -->
+  <div
+  class="hideandshow h-screen w-[65%] md:w-[40%] lg:hidden fixed top-0 bg-gray-200 bg-opacity-95 z-20"
+>
+  <div class="w-full h-full space-y-6">
+    <div class="absolute top-4 right-3 text-2xl text-gray-600">
+      <ion-icon onclick="hideSideNav()" name="close-outline"></ion-icon>
+    </div>
+    <div class="px-3 pt-8">
+      <img class="w-28 md:w-32" src="./Images/logo-d9bet-biz.png" alt="" />
+    </div>
+    <div
+      class="w-full h-full flex flex-col space-y-4 *:pb-2 *:border-b *:border-gray-400 *:pl-3 text-sm px-px *:hover:border-[#FF5200]"
+    >
+      <a href="./index.html"> TRANG CHỦ </a>
+      <a href="./dang-ky.html"> ĐĂNG KÝ </a>
+      <a href="./nap-tien.html"> NẠP TIỀN </a>
+      <a href="./rut-tien.html"> RÚT TIỀN </a>
+      <a href="./khuyen-mai.html"> KHUYẾN MÃI </a>
+      <a href="./thu-thuat-ca-cuoc.html"> THỦ THUẬT CÁ CƯỢC </a>
+    </div>
+  </div>
+</div>
 
        
       <!-- Header -->
@@ -100,37 +100,37 @@
           </div>
         </div>
 
-        <!-- sm header -->
-        <div class="w-full bg-[#161616] lg:hidden block">
-          <div class=" flex justify-center items-center py-4">
-            <div class="w-36 md:w-48">
-              <img src="./Images/logo-d9bet-biz.png" alt="" />
-            </div>
+       <!-- sm header -->
+      <div class="w-full bg-[#161616] lg:hidden block">
+        <div class=" flex justify-center items-center py-4">
+          <div class="w-44 md:52">
+            <img src="./Images/logo-d9bet-biz.png" alt="" />
           </div>
-          <div class="py-4 border-t border-[#FF5200]">
-            <div class="justify-between flex items-center px-2 md:px-5">
-              <div onclick="showSideNav()" class="text-3xl text-white">
-                <ion-icon name="menu-outline"></ion-icon>
-              </div>
-              <div class="flex items-center md:space-x-3 space-x-2 text-white">
-                <a href="https://www.hay88.one/?inviteCode=1751262">
-                  <button
-                    class="bg-[#009FE3] hover:bg-[#007FB6] transition-all duration-200 font-bold text-xs md:text-base pb-[6px] pt-[8px] px-4 md:px-6 rounded-full"
-                  >
-                    ĐĂNG NHẬP
-                  </button>
-                </a>
-                <a href="https://www.hay88.one/?inviteCode=1751262">
-                  <button
-                    class="bg-[#FF5200] hover:bg-[#CC4200] transition-all duration-200 font-bold text-xs md:text-base pb-[6px] pt-[8px] px-6 md:px-10 rounded-full"
-                  >
-                    ĐĂNG KÝ
-                  </button>
-                </a>
-              </div>
+        </div>
+        <div class="py-4 border-t border-[#FF5200]">
+          <div class="justify-between flex items-center px-2 md:px-5">
+            <div onclick="showSideNav()" class="text-3xl text-white">
+              <ion-icon name="menu-outline"></ion-icon>
+            </div>
+            <div class="flex items-center md:space-x-3 space-x-2 text-white">
+              <a href="https://www.hay88.one/?inviteCode=1751262">
+                <button
+                  class="bg-[#009FE3] hover:bg-[#007FB6] transition-all duration-200 font-bold text-xs md:text-base pb-[6px] pt-[8px] px-4 md:px-6 rounded-full"
+                >
+                  ĐĂNG NHẬP
+                </button>
+              </a>
+              <a href="https://www.hay88.one/?inviteCode=1751262">
+                <button
+                  class="bg-[#FF5200] hover:bg-[#CC4200] transition-all duration-200 font-bold text-xs md:text-base pb-[6px] pt-[8px] px-6 md:px-10 rounded-full"
+                >
+                  ĐĂNG KÝ
+                </button>
+              </a>
             </div>
           </div>
         </div>
+      </div>
       </div>
 
       <!-- container -->
