--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       <!-- sm header -->
       <div class="w-full bg-[#161616] lg:hidden block">
         <div class=" flex justify-center items-center py-4">
-          <div class="w-36 md:w-48">
+          <div class="w-44 md:52">
             <img src="./Images/logo-d9bet-biz.png" alt="" />
           </div>
         </div>
